hotfix: fix dotcom text link decoration in SubNav

--- a/packages/react/src/SubNav/SubNav.module.css
+++ b/packages/react/src/SubNav/SubNav.module.css
@@ -172,7 +172,7 @@
   }
 
   .SubNav__link {
-    text-decoration: none;
+    text-decoration: none !important; /* dotcom override */
     transition: color 0.2s var(--brand-animation-easing-glide);
     position: relative;
   }
