--- a/packages/react/src/IDE/IDE.module.css
+++ b/packages/react/src/IDE/IDE.module.css
@@ -1,15 +1,6 @@
-.IDE__inner {
+.IDE {
   --brand-IDE-container-height: 800px;
   --brand-IDE-bgColor: #131337;
-
-  position: relative;
-  background: #b4b4b4;
-  opacity: 0.9;
-  width: 100%;
-  height: var(--brand-IDE-container-height);
-  margin: 10px auto;
-  border-radius: 16px;
-  overflow: hidden;
 }
 
 .IDE--color-mode-dark .IDE__inner {
@@ -24,6 +15,17 @@
   border: 1px solid #e0e0e0;
   border-bottom: 1px solid #d4d4d4;
 }
+
+.IDE--glass {
+  backdrop-filter: blur(5px);
+}
+
+.IDE--glass .IDE__inner {
+  --brand-IDE-bgColor: transparent;
+  background: rgba(0, 0, 0, 0.7);
+  border-color: transparent !important;
+  opacity: 0.95;
+}
 /* 
 .IDE__dots {
   position: absolute;
@@ -37,8 +39,25 @@
   display: flex;
   height: calc(var(--brand-IDE-container-height) - 32px);
   width: 100%;
+}
+
+.IDE--glass .IDE__main {
+  height: var(--brand-IDE-container-height);
+}
+
+.IDE--default .IDE__main {
   padding-top: var(--base-size-32);
 }
+
+.IDE__inner {
+  position: relative;
+  width: 100%;
+  height: var(--brand-IDE-container-height);
+  margin: 10px auto;
+  border-radius: 16px;
+  overflow: hidden;
+}
+
 /* 
 .IDE__dot {
   display: block;
@@ -116,6 +135,10 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+}
+
+.IDE--glass .IDE__Chat {
+  background: #242538;
 }
 
 .IDE--full-exp .IDE__Chat {
@@ -234,8 +257,11 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin-left: var(--base-size-20);
   width: 100%;
+}
+
+.IDE--default .IDE__Editor {
+  margin-left: var(--base-size-20);
 }
 
 .IDE__Editor-tabs {
@@ -250,7 +276,7 @@
   gap: 4px;
   background: rgba(36, 37, 56, 0.5);
   font-family: var(--brand-fontStack-monospace);
-  font-size: 13px;
+  font-size: 14px;
   color: var(--brand-color-text-muted);
   cursor: pointer;
   border: none;
@@ -277,9 +303,16 @@
 }
 
 .IDE__Editor-content {
-  background: #242538;
   height: 100%;
   padding-top: var(--base-size-16);
+}
+
+[data-color-mode='dark'] .IDE__Editor-content {
+  background: #242538;
+}
+
+.IDE--glass .IDE__Editor-content {
+  background: #242538c4;
 }
 
 .IDE__Editor-pane {
