--- a/packages/react/src/IDE/IDE.stories.module.css
+++ b/packages/react/src/IDE/IDE.stories.module.css
@@ -1,5 +1,11 @@
-.vfx {
-  -webkit-mask-image: linear-gradient(to  right,var(--brand-color-canvas-default) 10%,transparent 80%);
-  mask-image: linear-gradient(to  right,var(--brand-color-canvas-default) 10%,transparent 80%);
-  transform: perspective(220px) rotate(2deg) rotateY(-4deg)
+/* .vfx {
+  -webkit-mask-image: linear-gradient(to right, var(--brand-color-canvas-default) 10%, transparent 80%);
+  mask-image: linear-gradient(to right, var(--brand-color-canvas-default) 10%, transparent 80%);
+  transform: perspective(220px) rotate(2deg) rotateY(-4deg);
+} */
+
+.riverVisual {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
